--- a/package.json
+++ b/package.json
@@ -9,13 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "autoprefixer": "10.4.14",
+    "@emotion/react": "^11.11.1",
+    "@emotion/server": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.13.7",
+    "@mui/material": "^5.13.7",
+    "@stripe/stripe-js": "^1.54.1",
+    "axios": "^1.4.0",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
-    "next": "13.4.8",
-    "postcss": "8.4.24",
+    "firebase": "^9.23.0",
+    "next": "^13.4.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2"
+    "react-firebase-hooks": "^5.1.1",
+    "react-icons": "^4.10.1",
+    "react-slick": "^0.29.0",
+    "react-top-loading-bar": "^2.3.1",
+    "slick-carousel": "^1.8.1",
+    "stripe": "^12.12.0",
+    "swr": "^2.2.0",
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2"
   }
 }
